Add translations to Logout Modal

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -81,6 +81,7 @@
   "Language": "Sprache",
   "Login": "Anmelden",
   "Logout": "Abmeldenn",
+  "Are you sure you want to logout?": "Sie sind sich sicher, dass Sie sich abmelden möchten?",
   "Toggle view": "Ansicht umschalten",
   "No rewards": "Keine Belohnungen",
   "No games": "Leider sind Sie derzeit in keinem Spiel registriert.",
