--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,6 +91,7 @@
   "Language": "Language",
   "Login": "Login",
   "Logout": "Logout",
+  "Are you sure you want to logout?": "Are you sure you want to logout?",
   "Toggle view": "Toggle view",
   "No rewards": "You will see your rewards here",
   "No games": "Unfortunately you are not enrolled in any games at the moment.",
