--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -81,6 +81,7 @@
   "Language": "Idioma",
   "Login": "Acceso",
   "Logout": "Cerrar sesión",
+  "Are you sure you want to logout?": "¿Estás seguro de que quieres cerrar sesión?",
   "Toggle view": "Cambiar vista",
   "No rewards": "Verás tus recompensas aquí",
   "No games": "Lamentablemente, no estás inscrito en ningún juego en este momento.",
