--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -81,6 +81,7 @@
   "Language": "Lingua",
   "Login": "Accedi",
   "Logout": "Disconnetti",
+  "Are you sure you want to logout?": "Sei sicuro di voler disconnetterti?",
   "Toggle view": "Alterna visuale",
   "No rewards": "Le tue ricompense appariranno qui",
   "No games": "Purtroppo al momento non sei iscritto a nessun gioco",
