--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -96,6 +96,7 @@
   "Cancel": "Anuluj",
   "Login": "Zaloguj",
   "Logout": "Wyloguj",
+  "Are you sure you want to logout?": "Na pewno chcesz się wylogować?",
   "Toggle view": "Przełącz widok",
   "No rewards": "To miejsce na Twoje nagrody, na razie nic tu nie ma",
   "No games": "Niestety nie jesteś zapisany/a jeszcze do żadnej gry.",
