--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -81,6 +81,7 @@
   "Language": "Língua",
   "Login": "Conecte-se",
   "Logout": "Sair",
+  "Are you sure you want to logout?": "Tem certeza de que deseja sair?",
   "Toggle view": "Alternar vista",
   "No rewards": "Você verá as suas recompensas aqui",
   "No games": "Infelizmente não está inscrito em nenhum jogo no momento.",
