--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -81,6 +81,7 @@
   "Language": "Язык",
   "Login": "Авторизоваться",
   "Logout": "Выйти",
+  "Are you sure you want to logout?": "Вы уверены, что хотите выйти?",
   "Toggle view": "Переключить вид",
   "No rewards": "Здесь вы увидите свои награды",
   "No games": "К сожалению, на данный момент вы не участвуете ни в каких играх.",
