--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -81,6 +81,7 @@
   "Language": "Мову",
   "Login": "Увійти",
   "Logout": "Вийти",
+  "Are you sure you want to logout?": "Ви впевнені, що бажаєте вийти?",
   "Toggle view": "Переключити перегляд",
   "No rewards": "Ви побачите свої винагороди тут",
   "No games": "На жаль, на даний момент ви не зареєстровані ні в одній грі.",
