--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -121,6 +121,7 @@
       "ready": "Готовый",
       "next": "Следующий",
       "addTestValues": "Добавить тестовые значения",
+      "nextTooltip": "Перейти к следующему нерешенному упражнению",
       "status": {
         "status": "Статус",
         "CONNECTION_PROBLEM": "ПРОБЛЕМА СОЕДИНЕНИЯ",
@@ -133,7 +134,12 @@
         "PROCESSING": "ОБРАБОТКА",
         "RESOURCE_USAGE_EXCEEDED": "ИСПОЛЬЗОВАНИЕ РЕСУРСОВ ПРЕВЫШАЕТ",
         "TIMEOUT": "ТАЙМ-АУТ",
-        "WRONG_ANSWER": "НЕПРАВИЛЬНЫЙ ОТВЕТ"
+        "WRONG_ANSWER": "НЕПРАВИЛЬНЫЙ ОТВЕТ",
+        "tooltip": {
+          "COMPILATION_ERROR": "В вашем коде есть синтаксические ошибки, которые препятствуют его выполнению",
+          "RUNTIME_ERROR": "Ваш код запускается, но вылетает во время выполнения",
+          "ACCEPT": "Ваше решение принято. Хорошая работа!"
+        }
       },
       "connection": {
         "success": "Подключено успешно",
