--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -121,6 +121,7 @@
       "ready": "Готові",
       "next": "Далі",
       "addTestValues": "Додайте значення тесту",
+      "nextTooltip": "Перейти до наступної невирішеної вправи",
       "status": {
         "status": "Статус",
         "CONNECTION_PROBLEM": "ПРОБЛЕМА ПІДКЛЮЧЕННЯ",
@@ -133,7 +134,12 @@
         "PROCESSING": "ОБРОБКА",
         "RESOURCE_USAGE_EXCEEDED": "ВИКОРИСТАННЯ РЕСУРСІВ ПЕРЕВИЩЕНО",
         "TIMEOUT": "ЧАС ВИЙШОВ",
-        "WRONG_ANSWER": "НЕПРАВИЛЬНУ ВІДПОВІДЬ"
+        "WRONG_ANSWER": "НЕПРАВИЛЬНУ ВІДПОВІДЬ",
+        "tooltip": {
+          "COMPILATION_ERROR": "У вашому коді є синтаксичні помилки, які перешкоджають його виконанню",
+          "RUNTIME_ERROR": "Ваш код запускається, але падає під час виконання",
+          "ACCEPT": "Ваше рішення прийнято. Гарна робота!"
+        }
       },
       "connection": {
         "success": "Під’єднано успішно",
