--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -145,6 +145,17 @@
         "success": "Подключено успешно",
         "error": "Возникла проблема с вашим подключением, попробуйте обновить"
       }
+    },
+    "feedback": {
+      "solutionAccepted": {
+        "title": "Решение Принято",
+        "description": "Решение было успешно записано."
+      },
+      "noCode": {
+        "title": "Нет Кода",
+        "description": "Пожалуйста, напишите код перед отправкой",
+        "descriptionRun": "Пожалуйста, напишите код перед запуском"
+      }
     }
   },
   "teacher": {
