--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -145,6 +145,17 @@
         "success": "Під’єднано успішно",
         "error": "Виникла проблема з підключенням, спробуйте оновити"
       }
+    },
+    "feedback": {
+      "solutionAccepted": {
+        "title": "Рішення Прийнято",
+        "description": "Рішення було успішно записано."
+      },
+      "noCode": {
+        "title": "Немає Коду",
+        "description": "Будь ласка, напишіть код перед відправкою",
+        "descriptionRun": "Будь ласка, напишіть код перед запуском"
+      }
     }
   },
   "teacher": {
