Update back button on account settings

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -30,8 +30,8 @@
   "Last name": "Último nome",
   "Submit": "Enviar",
   "Change password": "Alterar a palavra-passe",
-  "Old password": "Palavra-passe Antiga",
-  "New password": "Nova Palavra-passe",
+  "Old password": "Palavra-passe antiga",
+  "New password": "Nova palavra-passe",
   "Repeat new password": "Repita a nova palavra-passe",
   "Remove the assignment": "Remover a tarefa",
   "Add to the game": "Adicionar ao jogo",
