--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -5,6 +5,11 @@
     "title": "Час минув!",
     "description": "Ви швидко кодували, але недостатньо. Можливо, наступного разу!"
   },
+  "difficulty": {
+    "easy": "Легкий",
+    "medium": "Середній",
+    "hard": "Складний"
+  },
   "Change availability": "Змінити доступність",
   "Game profile": "Ігровий профіль",
   "Exercise": "Вправа",
