--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,6 +5,11 @@
     "title": "Время вышло!",
     "description": "Вы кодили быстро, но недостаточно. Может в следующий раз!"
   },
+  "difficulty": {
+    "easy": "Легкий",
+    "medium": "Средний",
+    "hard": "Сложный"
+  },
   "Change availability": "Изменить доступность",
   "Game profile": "Игровой профиль",
   "Exercise": "Упражнение",
