Add translations for notification on missing support for programming languages

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -115,7 +115,8 @@
     "terminal": {
       "waitingForResult": "Auf das Ergebnis warten ...",
       "feedback": {
-        "Ready": "Fertig"
+        "Ready": "Fertig",
+        "languageNotSupported": "Diese Sprache wird für die Ausführung im Browser noch nicht unterstützt"
       }
     },
     "menu": {
