--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -125,7 +125,8 @@
     "terminal": {
       "waitingForResult": "Waiting for result...",
       "feedback": {
-        "Ready": "Ready"
+        "Ready": "Ready",
+        "languageNotSupported": "This language is not supported for in-browser execution yet"
       }
     },
     "menu": {
