--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -130,7 +130,8 @@
     "terminal": {
       "waitingForResult": "Czekam na odpowiedź...",
       "feedback": {
-        "Ready": "Gotowy"
+        "Ready": "Gotowy",
+        "languageNotSupported": "Ten język nie jest jeszcze obsługiwany w przeglądarce"
       }
     },
     "menu": {
